--- a/zh-CN/3.develop/3.database-object-planning/1.database-object-planning-of-mysql-mode/1.create-database-of-mysql-mode-in-develop.md
+++ b/zh-CN/3.develop/3.database-object-planning/1.database-object-planning-of-mysql-mode/1.create-database-of-mysql-mode-in-develop.md
@@ -15,7 +15,7 @@
 
 在创建数据库前，您需要确认以下事项：
 
-* 请确认您已连接到数据库的 MySQL 租户，连接数据库的操作请参见 [连接数据库](../1.database-connection-with-client-of-mysql-mode/1.connection-methods-overview-of-mysql-mode.md)。
+* 请确认您已连接到数据库的 MySQL 租户，连接数据库的操作请参见 [连接方式概述](../../1.connect-to-oceanbase-database/1.connect-to-oceanbase-database-of-mysql-mode/1.connection-methods-overview-of-mysql-mode.md)。
 
   <main id="notice" type='explain'>
     <h4>说明</h4>
@@ -26,7 +26,7 @@
 
 ## 创建数据库语句
 
-请使用 [CREATE DATABASE](../../../7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/21.create-database-of-mysql-mode.md) 语句创建数据库。然后根据数据库创建建议，参考本文的示例来完成数据库的创建。
+请使用 [CREATE DATABASE](../../../7.reference/5.sql-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/21.create-database-of-mysql-mode.md) 语句创建数据库。然后根据数据库创建建议，参考本文的示例来完成数据库的创建。
 
 ## 数据库创建建议
 
@@ -34,10 +34,10 @@
 
 * 在 OceanBase 数据库中，每个数据库的名称必须保证全局唯一。
 
-* 应避免使用保留关键字作为数据库名，OceanBase 数据库 MySQL 模式的保留关键字请参见 [预留关键字](../../../7.reference/5.system-reference/8.reserved-keyword-of-mysql-mode.md)。
+* 应避免使用保留关键字作为数据库名，OceanBase 数据库 MySQL 模式的保留关键字请参见 [预留关键字](../../../7.reference/5.sql-reference/8.reserved-keyword-of-mysql-mode.md)。
 
 * 为了适应业务的长远发展，数据库的字符集编码需要能够存储绝大多数的字符，建议创建数据库时使用 `UTF8` 字符集编码。
-  数据库支持的字符集编码相关内容请参见 [数据库级字符集](../../../7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/1.basic-elements-of-mysql-mode/3.character-set-and-collation-of-mysql-mode/4.specify-character-set-and-collation-of-mysql-mode.md)。
+  数据库支持的字符集编码相关内容请参见 [数据库级字符集](../../../7.reference/5.sql-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/1.basic-elements-of-mysql-mode/3.character-set-and-collation-of-mysql-mode/4.specify-character-set-and-collation-of-mysql-mode.md)。
 
 ## 示例
 
@@ -94,4 +94,4 @@ obclient [test]> SHOW CREATE DATABASE test4;
 
 ## 相关阅读
 
-* [创建表](3.create-a-table-of-mysql-mode.md)
+* [创建表](3.create-table-of-mysql-mode-in-develop.md)
