--- a/zh-CN/3.develop/3.database-object-planning/1.database-object-planning-of-mysql-mode/2.create-tablegroup-of-mysql-mode-in-develop.md
+++ b/zh-CN/3.develop/3.database-object-planning/1.database-object-planning-of-mysql-mode/2.create-tablegroup-of-mysql-mode-in-develop.md
@@ -4,20 +4,20 @@
 
 ## 简介
 
-表组是一个逻辑概念，它描述的是 Table 的一个集合。通过定义表组，可以控制一组表在物理存储上的邻近关系。更多表组的介绍信息，请参见 [关于表组](../../../7.reference/2.administrator-guide/3.database-object-management/1.manage-object-of-mysql-mode/4.manage-table-groups-of-mysql-mode/1.about-table-groups-of-mysql-mode.md)。
+表组是一个逻辑概念，它描述的是 Table 的一个集合。通过定义表组，可以控制一组表在物理存储上的邻近关系。更多表组的介绍信息，请参见 [关于表组](../../../7.reference/3.database-object-management/1.manage-object-of-mysql-mode/4.manage-table-groups-of-mysql-mode/1.about-table-groups-of-mysql-mode.md)。
 
 ## 前提条件
 
 在创建表组前，您需要确认以下事项：
 
-* 请确认您已连接到数据库的 MySQL 租户，连接数据库的操作请参见 [连接数据库](../1.database-connection-with-client-of-mysql-mode/1.connection-methods-overview-of-mysql-mode.md)。
+* 请确认您已连接到数据库的 MySQL 租户，连接数据库的操作请参见 [连接方式概述](../../1.connect-to-oceanbase-database/1.connect-to-oceanbase-database-of-mysql-mode/1.connection-methods-overview-of-mysql-mode.md)。
 
   <main id="notice" type='explain'>
     <h4>说明</h4>
     <p>当前登录租户所属的租户模式可以由 <code>sys</code> 租户通过查询 <code>oceanbase.DBA_OB_TENANTS</code> 视图进行确认。 </p>
   </main>
 
-* 您已创建数据库。创建数据库的详细信息，请参见 [创建数据库](1.create-database-of-mysql-mode.md)。
+* 您已创建数据库。创建数据库的详细信息，请参见 [创建数据库](1.create-database-of-mysql-mode-in-develop.md)。
 
 * 请确认您已拥有 `CREATE` 权限，查看当前用户权限的相关操作请参见 [查看用户权限](../../../6.manage/5.security-and-permissions/3.access-control/2.user-and-permission/2.permission-of-mysql-mode/4.view-user-permissions-of-mysql-mode.md)。如果不具备该权限，请联系管理员为您授权，用户授权的相关操作请参见 [修改用户权限](../../../6.manage/5.security-and-permissions/3.access-control/2.user-and-permission/2.permission-of-mysql-mode/5.modify-user-permissions-of-mysql-mode.md)。
 
@@ -52,7 +52,7 @@ CREATE TABLEGROUP tablegroup_name [tablegroup_option];
 
 <main id="notice" type='explain'>
   <h4>说明</h4>
-  <p><ul><li>本文只是对 <code>CREATE TABLEGROUP</code> 语句进行了简要说明，如果需要了解详细的语法信息，请参见 <a href="../../../7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/27.create-tablegroup-of-mysql-mode.md">CREATE TABLEGROUP</a>。</li><li>在本文示例中，都是用的 <code>CREATE TABLE</code> 指定 <code>TABLEGROUP</code> 把表添加进表组，您也可以使用 <a href="../../../7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/17.alter-tablegroup-of-mysql-mode.md">ALTER TABLEGROUP</a> 语句把表添加进表组。</li></ul></p>
+  <p><ul><li>本文只是对 <code>CREATE TABLEGROUP</code> 语句进行了简要说明，如果需要了解详细的语法信息，请参见 <a href="../../../7.reference/5.sql-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/27.create-tablegroup-of-mysql-mode.md">CREATE TABLEGROUP</a>。</li><li>在本文示例中，都是用的 <code>CREATE TABLE</code> 指定 <code>TABLEGROUP</code> 把表添加进表组，您也可以使用 <a href="../../../7.reference/5.sql-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/17.alter-tablegroup-of-mysql-mode.md">ALTER TABLEGROUP</a> 语句把表添加进表组。</li></ul></p>
 </main>
 
 #### 示例 1
@@ -133,7 +133,7 @@ CREATE TABLEGROUP tablegroup_name [tablegroup_option];
 * 如果是 Hash 分区，要求引用的列数相同，并且分区个数相同。
 * 如果是 Range 分区，要求引用的列数相同，并且分区数相同，Range 分割点相同。
 
-关于分区的详细信息，请参见 [分区概述](../../../7.reference/2.administrator-guide/4.replica-management/2.manage-partition-table/2.mysql-mode/1.partition-overview-of-mysql-mode.md)。
+关于分区的详细信息，请参见 [分区概述](../../../7.reference/3.database-object-management/1.manage-object-of-mysql-mode/3.manage-partitions-of-mysql-mode/1.partition-overview-of-mysql-mode.md)。
 
 #### 示例 2
 
@@ -199,6 +199,6 @@ CREATE TABLEGROUP tablegroup_name [tablegroup_option];
 
 ## 相关文档
 
-* [关于表组](../../../7.reference/2.administrator-guide/3.database-object-management/1.manage-object-of-mysql-mode/4.manage-table-groups-of-mysql-mode/1.about-table-groups-of-mysql-mode.md)
-* [CREATE TABLEGROUP](../../../7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/27.create-tablegroup-of-mysql-mode.md)
-* [分区概述](../../../7.reference/2.administrator-guide/4.replica-management/2.manage-partition-table/2.mysql-mode/1.partition-overview-of-mysql-mode.md)
+* [关于表组](../../../7.reference/3.database-object-management/1.manage-object-of-mysql-mode/4.manage-table-groups-of-mysql-mode/1.about-table-groups-of-mysql-mode.md)
+* [CREATE TABLEGROUP](../../../7.reference/5.sql-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/27.create-tablegroup-of-mysql-mode.md)
+* [分区概述](../../../7.reference/3.database-object-management/1.manage-object-of-mysql-mode/3.manage-partitions-of-mysql-mode/1.partition-overview-of-mysql-mode.md)
