--- a/zh-CN/3.develop/3.database-object-planning/2.database-object-planning-of-oracle-mode/2.create-table-of-oracle-mode-in-develop.md
+++ b/zh-CN/3.develop/3.database-object-planning/2.database-object-planning-of-oracle-mode/2.create-table-of-oracle-mode-in-develop.md
@@ -16,18 +16,18 @@
 
 在创建表前，您需要确认以下事项：
 
-* 请确认您已连接到数据库的 Oracle 租户，连接数据库的操作请参见 [连接数据库](../1.database-connection-of-oracle-mode/1.connection-methods-overview-of-oracle-mode.md)。
+* 请确认您已连接到数据库的 Oracle 租户，连接数据库的操作请参见 [连接方式概述](../../1.connect-to-oceanbase-database/2.connect-to-oceanbase-database-of-oracle-mode/1.connection-methods-overview-of-oracle-mode.md)。
 
   <main id="notice" type='explain'>
    <h4>说明</h4>
    <p>当前登录租户所属的租户模式可以由 <code>sys</code> 租户通过查询 <code>oceanbase.DBA_OB_TENANTS</code> 视图进行确认。 </p>
   </main>
   
-* 请确认您已拥有 `CREATE TABLE` 权限，查看当前用户权限的相关操作请参见 [查看用户权限](../../../6.manage/5.security-and-permissions/3.access-control/2.user-and-permission/3.permission-of-oracle-mode/6.view-user-permissions-of-oracle-mode.md)。如果不具备该权限，请联系管理员为您授权，用户授权的相关操作请参见 [修改用户权限](../../../7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/9.manage-users-and-permissions/2.oracle-mode/5.modify-user-permissions-for-oralce-tenant-of-oracle-mode.md)。
+* 请确认您已拥有 `CREATE TABLE` 权限，查看当前用户权限的相关操作请参见 [查看用户权限](../../../7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/9.manage-users-and-permissions/2.oracle-mode/4.view-the-user-permissions-of-oracle-mode.md)。如果不具备该权限，请联系管理员为您授权，用户授权的相关操作请参见 [修改用户权限](../../../7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/9.manage-users-and-permissions/2.oracle-mode/5.modify-user-permissions-for-oralce-tenant-of-oracle-mode.md)。
 
 ## 创建表
 
-请使用 [CREATE TABLE](../../../7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/1.ddl-of-oracle-mode/24.create-table-of-oracle-mode.md) 语句创建表，并参考以下内容完成表的创建。
+请使用 [CREATE TABLE](../../../7.reference/5.sql-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/1.ddl-of-oracle-mode/24.create-table-of-oracle-mode.md) 语句创建表，并参考以下内容完成表的创建。
 
 ### 定义表名
 
@@ -52,7 +52,7 @@ Query OK, 0 rows affected
 
 * 根据数据类型的特点，为待存储在列中的数据选择合适的数据类型。
 
-* OceanBase 数据库 Oracle 模式中支持的数据类型及详细介绍请参见 [数据类型概述](../../../7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/3.basic-elements-of-oracle-mode/1.built-in-data-types-of-oracle-mode/1.overview-of-built-in-data-types-of-oracle-mode.md)。
+* OceanBase 数据库 Oracle 模式中支持的数据类型及详细介绍请参见 [数据类型概述](../../../7.reference/5.sql-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/3.basic-elements-of-oracle-mode/1.built-in-data-types-of-oracle-mode/1.overview-of-built-in-data-types-of-oracle-mode.md)。
 
 * 对于字符串数据，建议使用变长字符串数据类型，并指定最大长度。请确保指定的最大长度大于需要存储的最大字符数，避免超出最大长度时出现字符截断现象。
 
@@ -68,13 +68,13 @@ Query OK, 0 rows affected
 
 创建有主键的表后，系统会自动为主键列创建一个全局唯一索引，您可以通过主键快速定位到行。
 
-要指定某一列为主键列，请在该列的定义后添加 `PRIMARY KEY` 关键字。如果要在多列上定义主键约束，请在 [CREATE TABLE](../../../7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/1.ddl-of-oracle-mode/24.create-table-of-oracle-mode.md) 语句中所有列的列表之后再添加主键约束的定义。
+要指定某一列为主键列，请在该列的定义后添加 `PRIMARY KEY` 关键字。如果要在多列上定义主键约束，请在 [CREATE TABLE](../../../7.reference/5.sql-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/1.ddl-of-oracle-mode/24.create-table-of-oracle-mode.md) 语句中所有列的列表之后再添加主键约束的定义。
 
 以下是定义主键列时需要遵循的要求：
 
 * 建议为表定义一个主键，每个数据库表最多拥有一个主键列集合。
 
-  在 OceanBase ​数据库中，不强制用户为表定义主键，但使用主键可以使表内的每行数据被唯一确定，且不存在重复的数据行。如果没有合适的字段作为主键，您可以为表增加一个数值列作为主键，并使用 Oracle 租户的序列为该列填充值。有关序列的详细说明请参见 [序列](../../../7.reference/2.administrator-guide/3.database-object-management/2.manage-object-of-oracle-mode/5.management-sequence-of-oracle-mode.md)。
+  在 OceanBase ​数据库中，不强制用户为表定义主键，但使用主键可以使表内的每行数据被唯一确定，且不存在重复的数据行。如果没有合适的字段作为主键，您可以为表增加一个数值列作为主键，并使用 Oracle 租户的序列为该列填充值。有关序列的详细说明请参见 [管理序列](../../../7.reference/3.database-object-management/2.manage-object-of-oracle-mode/6.management-sequence-of-oracle-mode.md)。
 
   此外，如果在创建时未定义主键列， OceanBase 数据库支持为已存在的表添加主键列。
 
@@ -106,7 +106,7 @@ obclient [SYS]> desc ordr;
 
 示例 2 中，定义了 c1、c2 列为主键列，且约束名称为 PK_c1_c2。 c1、c2 列的值不允许为 NULL 并且必须是不重复的。
 
-定义主键列后，支持更改主键列和删除主键，更多主键约束相关的操作请参见 [定义列的约束类型](../../../7.reference/2.administrator-guide/3.database-object-management/2.manage-object-of-oracle-mode/1.manage-tables-of-oracle-mode/4.define-the-constraint-type-for-a-column-of-oracle-mode.md)。
+定义主键列后，支持更改主键列和删除主键，更多主键约束相关的操作请参见 [定义列的约束类型](../../../7.reference/3.database-object-management/2.manage-object-of-oracle-mode/1.manage-tables-of-oracle-mode/4.define-the-constraint-type-for-a-column-of-oracle-mode.md)。
 
 ### 定义其他列约束
 
@@ -124,7 +124,7 @@ obclient [SYS]> desc ordr;
 
   创建外键约束时，如果不指定外键名，系统会自动分配一个约束名，自动分配的约束名为 `表名_OBFK_创建时间戳`。例如，`t1_OBFK_1627747200000000`。
 
-  OceanBase 数据库默认开启了外键约束检查，外键约束检查开关由租户变量 `foreign_key_checks` 来控制。`foreign_key_checks` 变量的更多说明，请参见 [foreign_key_checks](../../../7.reference/5.system-reference/2.system-variable/3.global-system-variable/27.foreign_key_checks-global.md)。
+  OceanBase 数据库默认开启了外键约束检查，外键约束检查开关由租户变量 `foreign_key_checks` 来控制。`foreign_key_checks` 变量的更多说明，请参见 [foreign_key_checks](../../../7.reference/8.configuration-items-and-system-variables/2.system-variable/3.global-system-variable/27.foreign_key_checks-global.md)。
   
 * `CHECK` 约束：要求数据库中某列的值符合指定的条件。
 
@@ -132,7 +132,7 @@ obclient [SYS]> desc ordr;
 
   创建 `CHECK` 约束时，如果未指定约束名称，系统会自动分配一个约束名，自动分配的约束名为 `表名_OBCHECK_创建时间戳`，例如，`t1_OBCHECK_1629350823880271`。
 
-要约束单个列，请在该列的定义中添加一个约束关键字，如果要约束多个列，请在 [CREATE TABLE](../../../7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/1.ddl-of-oracle-mode/24.create-table-of-oracle-mode.md) 语句中所有列的列表之后再添加整个约束的定义。
+要约束单个列，请在该列的定义中添加一个约束关键字，如果要约束多个列，请在 [CREATE TABLE](../../../7.reference/5.sql-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/1.ddl-of-oracle-mode/24.create-table-of-oracle-mode.md) 语句中所有列的列表之后再添加整个约束的定义。
 
 以下是定义其他列约束时需要遵循的要求：
 
@@ -275,7 +275,7 @@ Query OK, 1 row affected
 
 示例 6 中，由于 `col1` 列添加了 `CHECK` 约束，后续插入列 `col1` 的值不大于 `10` 时就会报错。
 
-定义其他列约束的详细操作请参见 [定义列的约束类型](../../../7.reference/2.administrator-guide/3.database-object-management/2.manage-object-of-oracle-mode/1.manage-tables-of-oracle-mode/4.define-the-constraint-type-for-a-column-of-oracle-mode.md)。
+定义其他列约束的详细操作请参见 [定义列的约束类型](../../../7.reference/3.database-object-management/2.manage-object-of-oracle-mode/1.manage-tables-of-oracle-mode/4.define-the-constraint-type-for-a-column-of-oracle-mode.md)。
 
 ### 选择分区方案
 
@@ -356,7 +356,7 @@ Query OK, 0 rows affected
 
 Range 分区、List 分区、 Hash 分区均可以作为组合分区表的二级分区策略。在 OceanBase 数据库中，二级分区表还包括模板化二级分区表和非模板化二级分区表。
 
-下面通过几个简单示例，简单介绍二级分区表的创建方法。本文仅提供部分建表示例，分区表的详细示例请参见 [管理分区](../../../7.reference/2.administrator-guide/4.replica-management/2.manage-partition-table/1.oracle-mode/2.create-a-partition-table-of-oracle-mode.md)。
+下面通过几个简单示例，简单介绍二级分区表的创建方法。
 
 示例 10：创建 Range + List 分区的模板化二级分区表。
 
@@ -461,7 +461,7 @@ Query OK, 0 rows affected
 
 复制表是 OceanBase 数据库的一种特殊表。这种表可以在任意一个 “健康” 的副本上读取到数据的最新修改。对于写入频率较低、读取频率较高的场景，复制表是一种很好的选择。
 
-更多复制表信息，请参见管理员指南下 [创建表](../../../7.reference/2.administrator-guide/3.database-object-management/2.manage-object-of-oracle-mode/1.manage-tables-of-oracle-mode/2.create-a-table-for-oracle-tenant-of-oracle-mode.md) 中的 **创建复制表** 章节。
+更多复制表信息，请参见管理员指南下 [创建表](../../../7.reference/3.database-object-management/2.manage-object-of-oracle-mode/1.manage-tables-of-oracle-mode/2.create-a-table-for-oracle-tenant-of-oracle-mode.md) 中的 **创建复制表** 章节。
 
 <main id="notice" type='notice'>
   <h4>注意</h4>
@@ -489,8 +489,8 @@ CREATE TABLE table_name column_definition DUPLICATE_SCOPE='none | cluster';
 CREATE TABLE test_tbl13 (col1 NUMBER,col2 NUMBER) DUPLICATE_SCOPE= 'cluster';
 ```
 
-## 后续处理
+## 相关文档
 
-* [创建索引](3.create-a-index-of-oracle-mode.md)
+* [CREATE TABLE](../../../7.reference/5.sql-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/1.ddl-of-oracle-mode/24.create-table-of-oracle-mode.md)
 
-* [管理分区](../../../7.reference/2.administrator-guide/4.replica-management/2.manage-partition-table/1.oracle-mode/1.partition-overview-of-oracle-mode.md)
+* [创建表](../../../7.reference/3.database-object-management/2.manage-object-of-oracle-mode/1.manage-tables-of-oracle-mode/2.create-a-table-for-oracle-tenant-of-oracle-mode.md)
