--- a/zh-CN/3.develop/4.write-data/1.write-data-of-mysql-mode/3.delete-data-of-mysql-mode-in-develop.md
+++ b/zh-CN/3.develop/4.write-data/1.write-data-of-mysql-mode/3.delete-data-of-mysql-mode-in-develop.md
@@ -6,7 +6,7 @@
 
 在删除表数据前，请确认以下事项：
 
-* 请确认您已连接到数据库的 MySQL 租户，连接数据库的操作请参见 [连接数据库](../1.database-connection-with-client-of-mysql-mode/1.connection-methods-overview-of-mysql-mode.md)。
+* 请确认您已连接到数据库的 MySQL 租户，连接数据库的操作请参见 [连接方式概述](../../1.connect-to-oceanbase-database/1.connect-to-oceanbase-database-of-mysql-mode/1.connection-methods-overview-of-mysql-mode.md)。
   
   <main id="notice" type='explain'>
      <h4>说明</h4>
@@ -17,11 +17,11 @@
 
 ## 使用 DELETE 语句删除数据
 
-通常使用 [DELETE](../../../7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/32.delete-of-mysql-mode.md) 语句来删除表中的部分数据或全部数据。
+通常使用 [DELETE](../../../7.reference/5.sql-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/32.delete-of-mysql-mode.md) 语句来删除表中的部分数据或全部数据。
 
   <main id="notice" type='explain'>
     <h4>说明</h4>
-    <p>除了 <code>DELETE</code> 语句外，<code>REPLACE INTO</code> 语句也可能会删除数据，<code>REPLACE INTO</code> 语句相关的操作及示例请参见 <a href="../../../3.develop/1.application-development-of-mysql-mode/3.write-data-of-mysql-mode/4.replace-data-of-mysql-mode.md">替换数据</a>。</p>
+    <p>除了 <code>DELETE</code> 语句外，<code>REPLACE INTO</code> 语句也可能会删除数据，<code>REPLACE INTO</code> 语句相关的操作及示例请参见 <a href="4.replace-data-of-mysql-mode-in-develop.md">替换数据</a>。</p>
   </main>
 
 简单的 `DELETE` 语句的语法格式如下：
@@ -87,12 +87,12 @@ TRUNCATE [TABLE] table_name;
 obclient [test]> TRUNCATE TABLE t_insert;
 ```
 
-更多 `TRUNCATE TABLE` 语句的使用及说明请参见 [TRUNCATE TABLE](../../../7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/89.truncate-table-of-mysql-mode.md)。
+更多 `TRUNCATE TABLE` 语句的使用及说明请参见 [TRUNCATE TABLE](../../../7.reference/5.sql-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/89.truncate-table-of-mysql-mode.md)。
 
 ## 相关文档
 
-* [插入数据](1.insert-data-of-mysql-mode.md)
+* [插入数据](1.insert-data-of-mysql-mode-in-develop.md)
 
-* [更新数据](2.update-data-of-mysql-mode.md)
+* [更新数据](2.update-data-of-mysql-mode-in-develop.md)
 
-* [替换数据](4.replace-data-of-mysql-mode.md)
+* [替换数据](4.replace-data-of-mysql-mode-in-develop.md)
