--- a/zh-CN/3.develop/4.write-data/2.write-data-of-oracle-mode/4.replace-data-of-oracle-mode-in-develop.md
+++ b/zh-CN/3.develop/4.write-data/2.write-data-of-oracle-mode/4.replace-data-of-oracle-mode-in-develop.md
@@ -6,18 +6,18 @@
 
 在插入数据前，请确认以下事项：
 
-* 请确认您已连接到数据库的 Oracle 租户，连接数据库的操作请参见 [连接数据库](../1.database-connection-of-oracle-mode/1.connection-methods-overview-of-oracle-mode.md)。
+* 请确认您已连接到数据库的 Oracle 租户，连接数据库的操作请参见 [连接方式概述](../../1.connect-to-oceanbase-database/2.connect-to-oceanbase-database-of-oracle-mode/1.connection-methods-overview-of-oracle-mode.md)。
 
   <main id="notice" type='explain'>
    <h4>说明</h4>
    <p>当前登录租户所属的租户模式可以由 <code>sys</code> 租户通过查询 <code>oceanbase.DBA_OB_TENANTS</code> 视图进行确认。 </p>
   </main>
   
-* 请确认您已拥有源表的 `SELECT` 对象权限，以及目标表的 `INSERT` 和 `UPDATE` 权限，查看当前用户权限的相关操作请参见 [查看用户权限](../../../7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/9.manage-users-and-permissions/2.oracle-mode/4.view-the-user-permissions-of-oracle-mode.md)。如果不具备该权限，请联系管理员为您授权，用户授权的相关操作请参见 [修改用户权限](../../../7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/9.manage-users-and-permissions/2.oracle-mode/5.modify-user-permissions-for-oralce-tenant-of-oracle-mode.md)。
+* 请确认您已拥有源表的 `SELECT` 对象权限，以及目标表的 `INSERT` 和 `UPDATE` 权限，查看当前用户权限的相关操作请参见 [查看用户权限](../../../6.manage/5.security-and-permissions/3.access-control/2.user-and-permission/3.permission-of-oracle-mode/6.view-user-permissions-of-oracle-mode.md)。如果不具备该权限，请联系管理员为您授权，用户授权的相关操作请参见 [修改用户权限](../../../6.manage/5.security-and-permissions/3.access-control/2.user-and-permission/3.permission-of-oracle-mode/7.modify-user-permissions-of-oracle-mode.md)。
 
 ## 替换表数据
 
-请使用 [MERGE INTO](../../../7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/2.dml-of-oracle-mode/3.merge-of-oracle-mode.md) 语句替换目标表中的一条或多条记录。
+请使用 [MERGE INTO](../../../7.reference/5.sql-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/2.dml-of-oracle-mode/3.merge-of-oracle-mode.md) 语句替换目标表中的一条或多条记录。
 
 `MERGE INTO` 语句的语法格式如下：
 
@@ -229,10 +229,10 @@ obclient> SELECT * FROM t3@orcl_dblink;
 
 ## 相关文档
 
-* [插入数据](1.insert-data-of-oracle-mode.md)
+* [插入数据](1.insert-data-of-oracle-mode-in-develop.md)
 
-* [更新数据](2.update-data-of-oracle-mode.md)
+* [更新数据](2.update-data-of-oracle-mode-in-develop.md)
 
-* [删除数据](3.delete-data-of-oracle-mode.md)
+* [删除数据](3.delete-data-of-oracle-mode-in-develop.md)
 
-* [通过 DBLink 修改远端数据库中的数据](../../../7.reference/2.administrator-guide/3.database-object-management/2.manage-object-of-oracle-mode/9.manage-dblink-of-oracle-mode/4.update-data-in-remote-database-by-a-dblink-of-oracle-mode.md)
+* [通过 DBLink 修改远端数据库中的数据](../../../7.reference/3.database-object-management/2.manage-object-of-oracle-mode/10.manage-dblink-of-oracle-mode/4.update-data-in-remote-database-by-a-dblink-of-oracle-mode.md)
