--- a/zh-CN/3.develop/5.read-data/1.read-data-of-mysql-mode/1.single-table-query-of-mysql-mode.md
+++ b/zh-CN/3.develop/5.read-data/1.read-data-of-mysql-mode/1.single-table-query-of-mysql-mode.md
@@ -20,7 +20,7 @@ column_list：
  column_name[,column_name...] 
 ```
 
-关于查询语句的详细用法，请参见 [SELECT](../../../7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/81.select-of-mysql-mode/1.select-of-mysql-mode.md)。
+关于查询语句的详细用法，请参见 [SELECT](../../../7.reference/5.sql-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/81.select-of-mysql-mode/1.select-of-mysql-mode.md)。
 
 当 `WHERE`、`GROUP BY`、`HAVING`、`ORDER BY`、`LIMIT` 这些关键字一起使用时，先后顺序有明确的限制。关键字执行顺序如下：
 
@@ -166,7 +166,7 @@ SELECT id,name,age+1 FROM student;
 | 指定集合查询     | `IN`，`NOT IN`                   |
 | NULL 值查询   | `IS NULL`，`IS NOT NULL`         |
 
-有关查询条件的详细信息，请参见 [比较运算符](../../../7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/2.operator-of-mysql-mode/5.comparison-operators-of-mysql-mode.md)。
+有关查询条件的详细信息，请参见 [比较运算符](../../../7.reference/5.sql-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/2.operator-of-mysql-mode/5.comparison-operators-of-mysql-mode.md)。
 
 #### 比较条件查询
 
@@ -901,8 +901,8 @@ SELECT id,name FROM student ORDER BY id LIMIT 4,2;
 
 ## 相关文档
 
-* [SELECT](../../../7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/81.select-of-mysql-mode/1.select-of-mysql-mode.md)
+* [SELECT](../../../7.reference/5.sql-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/81.select-of-mysql-mode/1.select-of-mysql-mode.md)
 
-* [比较运算符](../../../7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/2.operator-of-mysql-mode/5.comparison-operators-of-mysql-mode.md)
+* [比较运算符](../../../7.reference/5.sql-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/2.operator-of-mysql-mode/5.comparison-operators-of-mysql-mode.md)
 
 * [查询中使用聚合函数](3.use-operators-and-functions-in-query-of-mysql-mode/7.use-aggregate-functions-in-queries-of-mysql-mode.md)
