--- a/zh-CN/3.develop/5.read-data/2.read-data-of-oracle-mode/1.single-table-query-of-oracle-mode.md
+++ b/zh-CN/3.develop/5.read-data/2.read-data-of-oracle-mode/1.single-table-query-of-oracle-mode.md
@@ -38,7 +38,7 @@ column_list：
 
 `WHERE` 和 `HAVING` 的区别是，`WHERE` 是在分组前对数据进行筛选，而 `HAVING` 是在分组后的结果里进行筛选，最后返回整个 SQL 的查询结果。
 
-关于查询语句的详细用法请参考 [SELECT](../../../7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/2.dml-of-oracle-mode/5.select-of-oracle-mode/1.simple-select-of-oracle-mode.md)。
+关于查询语句的详细用法请参考 [SELECT](../../../7.reference/5.sql-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/2.dml-of-oracle-mode/5.select-of-oracle-mode/1.simple-select-of-oracle-mode.md)。
 
 ## SELECT 查询基础
 
@@ -249,9 +249,9 @@ obclient> SELECT empname, sal-100, LOWER(job) FROM emp;
 
 * 函数的参数数量和类型必须和函数定义一致。
 
-更多自定义类型的信息，请参见 [CREATE TYPE](../../../7.reference/4.development-reference/3.pl-reference/3.pl-oracle/11.ddl-operations-on-stored-pl-units-oracle/12.create-type-oracle.md) 和 [用户自定义子类型](../../../7.reference/4.development-reference/3.pl-reference/3.pl-oracle/2.data-type-oracle/5.user-defined-data-types-oracle.md)。
+更多自定义类型的信息，请参见 [CREATE TYPE](../../../7.reference/5.sql-reference/3.pl-reference/3.pl-oracle/11.ddl-operations-on-stored-pl-units-oracle/12.create-type-oracle.md) 和 [用户自定义子类型](../../../7.reference/5.sql-reference/3.pl-reference/3.pl-oracle/2.data-type-oracle/5.user-defined-data-types-oracle.md)。
 
-更多创建函数的信息，请参见 [CREATE FUNCTION](../../../7.reference/4.development-reference/3.pl-reference/3.pl-oracle/11.ddl-operations-on-stored-pl-units-oracle/7.create-function-oracle.md) 和 [创建函数](../../../7.reference/4.development-reference/3.pl-reference/3.pl-oracle/7.stored-procedure-and-functions-oracle/3.create-a-function-oracle.md)。
+更多创建函数的信息，请参见 [CREATE FUNCTION](../../../7.reference/5.sql-reference/3.pl-reference/3.pl-oracle/11.ddl-operations-on-stored-pl-units-oracle/7.create-function-oracle.md) 和 [创建函数](../../../7.reference/5.sql-reference/3.pl-reference/3.pl-oracle/7.stored-procedure-and-functions-oracle/3.create-a-function-oracle.md)。
 
 示例如下：
 
@@ -862,7 +862,7 @@ SELECT user_id,SUM(FRUIT_PRICE) FROM fruit_order GROUP BY CUBE(user_id);
 4 rows in set
 ```
 
-更多分组汇总的信息，请参见 [SIMPLE SELECT](../../../7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/2.dml-of-oracle-mode/5.select-of-oracle-mode/1.simple-select-of-oracle-mode.md)。
+更多分组汇总的信息，请参见 [SIMPLE SELECT](../../../7.reference/5.sql-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/2.dml-of-oracle-mode/5.select-of-oracle-mode/1.simple-select-of-oracle-mode.md)。
 
 ## 排序查询
 
@@ -957,7 +957,7 @@ obclient> SELECT empname, deptno,sal, HIREDATE FROM emp WHERE sal>=1000 ORDER BY
 
 可以使用 `NLSSORT` 函数进行中文的拼音排序，笔画排序等。
 
-有关 `NLSSORT` 函数的详细信息，请参见 [NLSSORT](../../../7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/5.functions-of-oracle-mode/2.single-row-functions-of-oracle-mode/2.string-functions-that-return-a-string-of-oracle-mode/8.nlssort-of-oracle-mode.md)。
+有关 `NLSSORT` 函数的详细信息，请参见 [NLSSORT](../../../7.reference/5.sql-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/5.functions-of-oracle-mode/2.single-row-functions-of-oracle-mode/2.string-functions-that-return-a-string-of-oracle-mode/8.nlssort-of-oracle-mode.md)。
 
 #### 示例
 
@@ -1087,8 +1087,6 @@ obclient>  SELECT id, name,num FROM tb ORDER BY num FETCH FIRST 30 PERCENT ROWS 
 
 ## 相关文档
 
-* [SELECT](../../../7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/2.dml-of-oracle-mode/5.select-of-oracle-mode/1.simple-select-of-oracle-mode.md)。
+* [SELECT](../../../7.reference/5.sql-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/2.dml-of-oracle-mode/5.select-of-oracle-mode/1.simple-select-of-oracle-mode.md)
 
-* [在查询中使用操作符和函数](9.execution-plan-of-oracle-mode/1.view-query-execution-plan-of-oracle-mode.md)。
-
-* [模式匹配条件](../../../7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/7.condition-of-oracle-mode/6.pattern-matching-conditions-of-oracle-mode.md)
+* [模式匹配条件](../../../7.reference/5.sql-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/7.condition-of-oracle-mode/6.pattern-matching-conditions-of-oracle-mode.md)
