--- a/zh-CN/3.develop/7.application-error-handling-specification-and-common-error-solutions/2.common-errors-and-solutions-of-mysql-mode/10.data-truncated-with-error-code-1265-of-mysql-mode.md
+++ b/zh-CN/3.develop/7.application-error-handling-specification-and-common-error-solutions/2.common-errors-and-solutions-of-mysql-mode/10.data-truncated-with-error-code-1265-of-mysql-mode.md
@@ -19,7 +19,7 @@ ERROR 1265 (01000): Data truncated for argument
 
 * 兼容 MySQL 错误码：1265
 
-有关错误码的详细说明及介绍，请参见 [错误码概述](../../../7.reference/5.system-reference/6.error-code-of-mysql-mode/1.use-error-information-of-mysql-mode.md)。
+有关错误码的详细说明及介绍，请参见 [错误码概述](../../../7.reference/9.error-code/6.error-code-of-mysql-mode/1.use-error-information-of-mysql-mode.md)。
 
 ## 可能原因
 
