--- a/zh-CN/3.develop/7.application-error-handling-specification-and-common-error-solutions/3.common-errors-and-solutions-of-oracle-mode/5.user-password-error-with-error-code-1045-of-oracle-mode.md
+++ b/zh-CN/3.develop/7.application-error-handling-specification-and-common-error-solutions/3.common-errors-and-solutions-of-oracle-mode/5.user-password-error-with-error-code-1045-of-oracle-mode.md
@@ -46,7 +46,7 @@ ERROR 1045 (42000): Access denied for user 'NY'@'xxx.xxx.xxx.xxx' (using passwor
 
    <main id="notice" type='explain'>
      <h4>说明</h4>
-     <p>为用户设置密码时，用户密码需要符合当前租户的密码复杂度。密码复杂度相关操作及说明请参见 <a href="../../../7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/9.manage-users-and-permissions/2.oracle-mode/2.set-password-complexity-of-oracle-mode.md">设置密码复杂度</a>。</p>
+     <p>为用户设置密码时，用户密码需要符合当前租户的密码复杂度。密码复杂度相关操作及说明请参见 <a href="../../../6.manage/5.security-and-permissions/2.identification-and-authentication/2.identification-and-authentication-of-oracle-mode/2.password-complexity-of-oracle-mode.md">密码复杂度</a>。</p>
    </main>
 
 3. 再次使用 `ny` 用户登录集群的 `Oracle` 租户。
