--- a/zh-CN/5.data-migration/10.use-sql-statements-migrate-data/2.migration-unit.md
+++ b/zh-CN/5.data-migration/10.use-sql-statements-migrate-data/2.migration-unit.md
@@ -66,6 +66,6 @@ ALTER SYSTEM MIGRATE UNIT [=] unit_id
 
 ## 相关文档
 
-* 资源单元迁移语法详细信息，请参见 [MIGRATE UNIT](../../7.reference/4.development-reference/1.sql-syntax/1.system-tenants/2.alter-system/14.migrate-unit.md)。
+* 资源单元迁移语法详细信息，请参见 [MIGRATE UNIT](../../7.reference/5.sql-reference/1.sql-syntax/1.system-tenants/2.alter-system/14.migrate-unit.md)。
 
-* 取消资源单元迁移详细信息，请参见 [CANCEL MIGRATE UNIT](../../7.reference/4.development-reference/1.sql-syntax/1.system-tenants/2.alter-system/4.cancel-migrate-unit.md)。
+* 取消资源单元迁移详细信息，请参见 [CANCEL MIGRATE UNIT](../../7.reference/5.sql-reference/1.sql-syntax/1.system-tenants/2.alter-system/4.cancel-migrate-unit.md)。
