--- a/zh-CN/2.quickstart/2.get-started-with-oceanbase-sql/3.basic-sql-operations-of-oracle-mode.md
+++ b/zh-CN/2.quickstart/2.get-started-with-oceanbase-sql/3.basic-sql-operations-of-oracle-mode.md
@@ -22,7 +22,7 @@ obclient> CREATE TABLE test (c1 INT PRIMARY KEY, c2 VARCHAR(3));
 Query OK, 0 rows affected
 ```
 
-更多 `CREATE TABLE` 语句相关的语法说明，请参见 [CREATE TABLE](../../7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/1.ddl-of-oracle-mode/24.create-table-of-oracle-mode.md) 章节。
+更多 `CREATE TABLE` 语句相关的语法说明，请参见 [CREATE TABLE](../../7.reference/5.sql-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/1.ddl-of-oracle-mode/24.create-table-of-oracle-mode.md) 章节。
 
 ### 修改表
 
@@ -84,7 +84,7 @@ Query OK, 0 rows affected
   2 rows in set
   ```
 
-更多 `ALTER TABLE` 语句相关的语法说明，请参见 [ALTER TABLE](../../7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/1.ddl-of-oracle-mode/10.alter-table-of-oracle-mode.md) 章节。
+更多 `ALTER TABLE` 语句相关的语法说明，请参见 [ALTER TABLE](../../7.reference/5.sql-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/1.ddl-of-oracle-mode/10.alter-table-of-oracle-mode.md) 章节。
 
 ### 删除表
 
@@ -97,7 +97,7 @@ obclient> DROP TABLE test;
 Query OK, 0 rows affected
 ```
 
-更多 `DROP TABLE` 语句相关的语法说明，请参见 [DROP TABLE](../../7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/1.ddl-of-oracle-mode/39.drop-table-of-oracle-mode.md) 章节。
+更多 `DROP TABLE` 语句相关的语法说明，请参见 [DROP TABLE](../../7.reference/5.sql-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/1.ddl-of-oracle-mode/39.drop-table-of-oracle-mode.md) 章节。
 
 ## 索引操作
 
@@ -123,7 +123,7 @@ obclient> CREATE INDEX test_index ON test (c1, c2);
 Query OK, 0 rows affected
 ```
 
-更多 `CREATE INDEX` 语句相关的语法说明，请参见 [CREATE INDEX](../../7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/1.ddl-of-oracle-mode/16.create-index-of-oracle-mode.md) 章节。
+更多 `CREATE INDEX` 语句相关的语法说明，请参见 [CREATE INDEX](../../7.reference/5.sql-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/1.ddl-of-oracle-mode/16.create-index-of-oracle-mode.md) 章节。
 
 ### 查看索引
 
@@ -191,7 +191,7 @@ obclient> DROP INDEX test_index;
 Query OK, 0 rows affected
 ```
 
-更多 `DROP INDEX` 语句相关的语法说明，请参见 [DROP INDEX](../../7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/1.ddl-of-oracle-mode/32.drop-index-of-oracle-mode.md) 章节。
+更多 `DROP INDEX` 语句相关的语法说明，请参见 [DROP INDEX](../../7.reference/5.sql-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/1.ddl-of-oracle-mode/32.drop-index-of-oracle-mode.md) 章节。
 
 ## 插入数据
 
@@ -258,7 +258,7 @@ Query OK, 0 rows affected
   3 rows in set
   ```
 
-更多 `INSERT` 语句相关的语法，请参见 [INSERT](../../7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/2.dml-of-oracle-mode/2.insert-of-oracle-mode.md) 章节。
+更多 `INSERT` 语句相关的语法，请参见 [INSERT](../../7.reference/5.sql-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/2.dml-of-oracle-mode/2.insert-of-oracle-mode.md) 章节。
 
 ## 删除数据
 
@@ -280,7 +280,7 @@ obclient> SELECT * FROM t1;
 2 rows in set
 ```
 
-更多 `DELETE` 语句相关的语法说明，请参见 [DELETE](../../7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/2.dml-of-oracle-mode/1.delete-of-oracle-mode.md) 章节。
+更多 `DELETE` 语句相关的语法说明，请参见 [DELETE](../../7.reference/5.sql-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/2.dml-of-oracle-mode/1.delete-of-oracle-mode.md) 章节。
 
 ## 更新数据
 
@@ -322,7 +322,7 @@ obclient> SELECT * FROM t1;
   2 rows in set
   ```
 
-更多 `UPDATE` 语句相关的语法，请参见 [UPDATE](../../7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/2.dml-of-oracle-mode/6.update-of-oracle-mode.md) 章节。
+更多 `UPDATE` 语句相关的语法，请参见 [UPDATE](../../7.reference/5.sql-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/2.dml-of-oracle-mode/6.update-of-oracle-mode.md) 章节。
 
 ## 查询数据
 
@@ -387,7 +387,7 @@ obclient> SELECT * FROM t1;
   2 rows in set
   ```
 
-更多 `SELECT` 语句相关的语法说明，请参见 [SELECT](../../7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/2.dml-of-oracle-mode/5.select-of-oracle-mode/1.simple-select-of-oracle-mode.md) 章节。
+更多 `SELECT` 语句相关的语法说明，请参见 [SELECT](../../7.reference/5.sql-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/2.dml-of-oracle-mode/5.select-of-oracle-mode/1.simple-select-of-oracle-mode.md) 章节。
 
 ## 提交事务
 
@@ -444,8 +444,9 @@ obclient> SELECT * FROM t_insert;
 +----+------+-------+------------+
 4 rows in set
 ```
+D:\AntCode\2023年AntCode处理\V4.2.0\20230706-马伟霞分支死链修改\oceanbase-database-enterprise-doc\zh-CN\3.develop/6.transaction-in-develop/2.transaction-in-develop-of-oracle-mode/1.transaction-management-overview-of-oracle-mode.md
 
-更多事务控制语句相关的说明，请参见 [事务管理概述](../../3.develop/2.application-development-of-oracle-mode/5.transaction-management-of-oracle-mode/1.transaction-management-overview-of-oracle-mode.md)。
+更多事务控制语句相关的说明，请参见 [事务管理概述](../../3.develop/6.transaction-in-develop/2.transaction-in-develop-of-oracle-mode/1.transaction-management-overview-of-oracle-mode.md)。
 
 ## 回滚事务
 
@@ -513,4 +514,4 @@ obclient> SELECT * FROM t_insert;
 3 rows in set
 ```
 
-更多事务控制语句相关的说明，请参见 [事务管理概述](../../3.develop/2.application-development-of-oracle-mode/5.transaction-management-of-oracle-mode/1.transaction-management-overview-of-oracle-mode.md)。
+更多事务控制语句相关的说明，请参见 [事务管理概述](../../3.develop/6.transaction-in-develop/2.transaction-in-develop-of-oracle-mode/1.transaction-management-overview-of-oracle-mode.md)。
