--- a/zh-CN/3.develop/4.write-data/1.write-data-of-mysql-mode/2.update-data-of-mysql-mode-in-develop.md
+++ b/zh-CN/3.develop/4.write-data/1.write-data-of-mysql-mode/2.update-data-of-mysql-mode-in-develop.md
@@ -6,7 +6,7 @@
 
 在更新表数据前，请确认以下事项：
 
-* 请确认您已连接到数据库的 MySQL 租户，连接数据库的操作请参见 [连接数据库](../1.database-connection-with-client-of-mysql-mode/1.connection-methods-overview-of-mysql-mode.md)。
+* 请确认您已连接到数据库的 MySQL 租户，连接数据库的操作请参见 [连接方式概述](../../1.connect-to-oceanbase-database/1.connect-to-oceanbase-database-of-mysql-mode/1.connection-methods-overview-of-mysql-mode.md)。
   
   <main id="notice" type='explain'>
    <h4>说明</h4>
@@ -17,7 +17,7 @@
 
 ## 使用 UPDATE 语句更新数据
 
-通常使用 [UPDATE](../../../7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/90.update-of-mysql-mode.md) 语句来更新表数据。
+通常使用 [UPDATE](../../../7.reference/5.sql-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/90.update-of-mysql-mode.md) 语句来更新表数据。
 
 `UPDATE` 语句的语法格式如下：
 
@@ -169,8 +169,8 @@ obclient [test]> SELECT * FROM t_insert;
 
 ## 相关文档
 
-* [插入数据](1.insert-data-of-mysql-mode.md)
+* [插入数据](1.insert-data-of-mysql-mode-in-develop.md)
 
-* [删除数据](3.delete-data-of-mysql-mode.md)
+* [删除数据](3.delete-data-of-mysql-mode-in-develop.md)
 
-* [替换数据](4.replace-data-of-mysql-mode.md)
+* [替换数据](4.replace-data-of-mysql-mode-in-develop.md)
