--- a/zh-CN/3.develop/5.read-data/1.read-data-of-mysql-mode/5.query-collection-operations-of-mysql-mode.md
+++ b/zh-CN/3.develop/5.read-data/1.read-data-of-mysql-mode/5.query-collection-operations-of-mysql-mode.md
@@ -12,7 +12,7 @@ select_clause_set_left
 select_clause_set_right
 ```
 
-更多集合查询语法的信息，请参见 [UNION 子句](../../../7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/81.select-of-mysql-mode/4.union-clause-of-mysql-mode.md)。
+更多集合查询语法的信息，请参见 [UNION 子句](../../../7.reference/5.sql-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/81.select-of-mysql-mode/4.union-clause-of-mysql-mode.md)。
 
 **参数解释：**
 
@@ -177,4 +177,4 @@ SELECT id, name FROM test_tbl2;
 
 ## 相关文档
 
-[UNION 子句](../../../7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/81.select-of-mysql-mode/4.union-clause-of-mysql-mode.md)
+[UNION 子句](../../../7.reference/5.sql-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/81.select-of-mysql-mode/4.union-clause-of-mysql-mode.md)
