--- a/zh-CN/3.develop/5.read-data/2.read-data-of-oracle-mode/2.multi-table-join-query-of-oracle-mode/5.subquery-of-oracle-mode-develop.md
+++ b/zh-CN/3.develop/5.read-data/2.read-data-of-oracle-mode/2.multi-table-join-query-of-oracle-mode/5.subquery-of-oracle-mode-develop.md
@@ -301,6 +301,6 @@ obclient [USER001]> SELECT * FROM tbl1,TABLE(CAST(MULTISET(SELECT tbl2.col2 FROM
 
 ## 相关文档
 
-* [SELECT](../../../../7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/2.dml-of-oracle-mode/5.select-of-oracle-mode/1.simple-select-of-oracle-mode.md)
-* [CAST](../../../../7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/5.functions-of-oracle-mode/2.single-row-functions-of-oracle-mode/6.conversion-functions-of-oracle-mode/2.cast-of-oracle-mode.md)
-* [CREATE TYPE](../../../../7.reference/4.development-reference/3.pl-reference/3.pl-oracle/11.ddl-operations-on-stored-pl-units-oracle/12.create-type-oracle.md)
+* [SELECT](../../../../7.reference/5.sql-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/2.dml-of-oracle-mode/5.select-of-oracle-mode/1.simple-select-of-oracle-mode.md)
+* [CAST](../../../../7.reference/5.sql-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/5.functions-of-oracle-mode/2.single-row-functions-of-oracle-mode/6.conversion-functions-of-oracle-mode/2.cast-of-oracle-mode.md)
+* [CREATE TYPE](../../../../7.reference/5.sql-reference/3.pl-reference/3.pl-oracle/11.ddl-operations-on-stored-pl-units-oracle/12.create-type-oracle.md)
