--- a/zh-CN/3.develop/7.application-error-handling-specification-and-common-error-solutions/2.common-errors-and-solutions-of-mysql-mode/4.user-locked-with-error-code-3118-of-mysql-mode.md
+++ b/zh-CN/3.develop/7.application-error-handling-specification-and-common-error-solutions/2.common-errors-and-solutions-of-mysql-mode/4.user-locked-with-error-code-3118-of-mysql-mode.md
@@ -20,11 +20,11 @@ ERROR 3118 (HY000): User locked
 
 * 兼容 MySQL 错误码：3118
 
-有关错误码的详细说明及介绍，请参见 [错误码概述](../../../7.reference/5.system-reference/6.error-code-of-mysql-mode/1.use-error-information-of-mysql-mode.md)。
+有关错误码的详细说明及介绍，请参见 [错误码概述](../../../7.reference/9.error-code/6.error-code-of-mysql-mode/1.use-error-information-of-mysql-mode.md)。
 
 ## 可能原因
 
-OceanBase 数据库设置了登录失败处理策略，对于多次登录失败的用户，OceanBase 数据库会锁定该用户，以便防止恶意的密码攻击，从而保护数据库，提升数据库的安全性。登录失败处理策略相关操作及说明请参见 [登录失败处理策略](../../../7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/9.manage-users-and-permissions/3.mysql-mode/3.logon-failure-handling-policy-of-mysql-mode.md)。
+OceanBase 数据库设置了登录失败处理策略，对于多次登录失败的用户，OceanBase 数据库会锁定该用户，以便防止恶意的密码攻击，从而保护数据库，提升数据库的安全性。登录失败处理策略相关操作及说明请参见 [登录失败处理策略](../../../6.manage/5.security-and-permissions/2.identification-and-authentication/1.identification-and-authentication-of-mysql-mode/3.login-failure-handling-of-mysql-mode.md)。
 
 ## 解决方法
 
