--- a/zh-CN/3.develop/7.application-error-handling-specification-and-common-error-solutions/3.common-errors-and-solutions-of-oracle-mode/2.transaction-idle-timeout-with-error-code-ora-24761-of-oracle-mode.md
+++ b/zh-CN/3.develop/7.application-error-handling-specification-and-common-error-solutions/3.common-errors-and-solutions-of-oracle-mode/2.transaction-idle-timeout-with-error-code-ora-24761-of-oracle-mode.md
@@ -35,7 +35,7 @@ ORA-24761: transaction rolled back: transaction idle timeout
 
 * SQLSTATE：25000
 
-关于错误码的详细说明及介绍，请参见 [错误码概述](../../../7.reference/5.system-reference/7.error-code-of-oracle-mode/1.use-error-information-of-oracle-mode.md)。
+关于错误码的详细说明及介绍，请参见 [错误码概述](../../../7.reference/9.error-code/7.error-code-of-oracle-mode/1.use-error-information-of-oracle-mode.md)。
 
 ## 可能原因
 
