--- a/zh-CN/3.develop/7.application-error-handling-specification-and-common-error-solutions/3.common-errors-and-solutions-of-oracle-mode/3.transaction-timeout-with-error-code-ora-00600-of-oracle-mode.md
+++ b/zh-CN/3.develop/7.application-error-handling-specification-and-common-error-solutions/3.common-errors-and-solutions-of-oracle-mode/3.transaction-timeout-with-error-code-ora-00600-of-oracle-mode.md
@@ -50,7 +50,7 @@ ORA-00600: internal error code, arguments: -6210, Transaction timeout occurred, 
 
 * OceanBase 错误码：6210
 
-有关错误码的详细说明及介绍，请参见 [错误码概述](../../../7.reference/5.system-reference/7.error-code-of-oracle-mode/1.use-error-information-of-oracle-mode.md)。
+有关错误码的详细说明及介绍，请参见 [错误码概述](../../../7.reference/9.error-code/7.error-code-of-oracle-mode/1.use-error-information-of-oracle-mode.md)。
 
 ## 可能原因
 
