--- a/zh-CN/4.deploy/3.deploy-oceanbase-enterprise-edition/4.deploy-through-the-command-line/2.deploy-the-oceanbase-cluster-command-line/1.stand-alone-deployment-of-oceanbase-database.md
+++ b/zh-CN/4.deploy/3.deploy-oceanbase-enterprise-edition/4.deploy-through-the-command-line/2.deploy-the-oceanbase-cluster-command-line/1.stand-alone-deployment-of-oceanbase-database.md
@@ -271,9 +271,9 @@
 
 ## 相关文档
 
-* [通过 OBClient 连接 OceanBase 租户](../../../../3.develop/1.application-development-of-mysql-mode/1.database-connection-with-client-of-mysql-mode/3.connect-to-an-oceanbase-tenant-by-using-obclient-of-mysql-mode.md)
-* [系统配置项总览](../../../../7.reference/5.system-reference/1.system-configuration-items/2.system-configuration-items-overview-list.md)
-* [ALTER USER](../../../../7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/18.alter-user-of-mysql-mode.md)
+* [通过 OBClient 连接 OceanBase 租户](../../../../3.develop/1.connect-to-oceanbase-database/1.connect-to-oceanbase-database-of-mysql-mode/3.connect-to-an-oceanbase-tenant-by-using-obclient-of-mysql-mode.md)
+* [系统配置项总览](../../../../7.reference/8.configuration-items-and-system-variables/1.system-configuration-items/2.system-configuration-items-overview-list.md)
+* [ALTER USER](../../../../7.reference/5.sql-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/18.alter-user-of-mysql-mode.md)
 * [用户租户介绍](../../../../6.manage/2.tenant-management/4.introduction-of-user-tenant.md)
-* [CREATE TENANT](../../../../7.reference/4.development-reference/1.sql-syntax/1.system-tenants/8.create-tenant.md)
+* [CREATE TENANT](../../../../7.reference/5.sql-reference/1.sql-syntax/1.system-tenants/8.create-tenant.md)
 * [单机在线转分布式部署](../../../../6.manage/1.cluster-management/3.common-cluster-operations/14.single-machine-deployment-online-to-distributed.md)
