--- a/zh-CN/5.data-migration/11.bypass-import/3.use-insert-into-select-statement-to-bypass-import-data.md
+++ b/zh-CN/5.data-migration/11.bypass-import/3.use-insert-into-select-statement-to-bypass-import-data.md
@@ -16,7 +16,7 @@
 INSERT /*+ append enable_parallel_dml parallel(N) */ INTO  table_name select_sentence
 ```
 
-更多 `INSERT INTO` 语法的信息，请参见 [INSERT（MySQL 模式）](../../7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/57.insert-sql-of-mysql-mode.md) 和 [INSERT（Oracle 模式）](../../7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/2.dml-of-oracle-mode/2.insert-of-oracle-mode.md)。
+更多 `INSERT INTO` 语法的信息，请参见 [INSERT（MySQL 模式）](../../7.reference/5.sql-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/57.insert-sql-of-mysql-mode.md) 和 [INSERT（Oracle 模式）](../../7.reference/5.sql-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/2.dml-of-oracle-mode/2.insert-of-oracle-mode.md)。
 
 **参数解释：**
 
@@ -158,4 +158,8 @@ obclient [test]> EXPLAIN EXTENDED INSERT /*+ append enable_parallel_dml parallel
 ## 相关文档
 
 * [表与表之间的数据迁移](../10.use-sql-statements-migrate-data/1.data-migration-between-tables.md)
-* [查看执行计划](../../3.develop/1.application-development-of-mysql-mode/4.read-data-of-mysql-mode/9.execution-plan-of-mysql-mode/1.view-the-execution-plan-of-mysql-mode.md)
+* [SQL 执行计划简介](../../7.reference/10.performance-tuning-guide/5.sql-optimization/2.sql-execution-plan/1.introduction-to-sql-execution-plans.md)
+
+D:\AntCode\2023年AntCode处理\V4.2.0\20230706-马伟霞分支死链修改\oceanbase-database-enterprise-doc\zh-CN\7.reference\10.performance-tuning-guide\5.sql-optimization\
+
+2.sql-execution-plan/1.introduction-to-sql-execution-plans.md
