--- a/zh-CN/7.reference/12.database-proxy/2.obproxy-management/3.manage-obproxy/2.start-obproxy.md
+++ b/zh-CN/7.reference/12.database-proxy/2.obproxy-management/3.manage-obproxy/2.start-obproxy.md
@@ -4,7 +4,7 @@ OBProxy 部署成功后，可以通过命令启动单个 obproxy 进程。
 
 ## 前提条件
 
-请确认已部署 OBProxy，部署 OBProxy 的具体操作请参见 [部署 OBProxy](../../../../../4.deploy/3.deploy-oceanbase-database-enterprise/4.command-line-deployment/4.deploy-obproxy-command-line/1.deploy-obproxy-command-line.md)。
+请确认已部署 OBProxy，部署 OBProxy 的具体操作请参见 [部署 OBProxy](../../../../4.deploy/3.deploy-oceanbase-enterprise-edition/4.deploy-through-the-command-line/3.deploy-obproxy-command-line.md)。
 
 ## 背景信息
 
