--- a/zh-CN/7.reference/5.sql-reference/1.sql-syntax/1.system-tenants/2.alter-system/26.log-restore-source.md
+++ b/zh-CN/7.reference/5.sql-reference/1.sql-syntax/1.system-tenants/2.alter-system/26.log-restore-source.md
@@ -26,12 +26,13 @@ ALTER SYSTEM SET LOG_RESTORE_SOURCE ='LOCATION=archive_path' [ TENANT = standby_
 
 |          **参数**      |          **描述**      |
 |------------------------|------------------------|
+| LOG_RESTORE_SOURCE  | 日志恢复源配置。 |
 | host_ip_list       | 主租户系统日志流的位置信息，即主租户或源端的备租户所在副本的 OBServer 节点的 IP 及 RPC 端口号，多个 IP 地址之间使用分号（;）分隔。备租户会秒级探测主租户系统日志流的位置变化并自动更新，在主租户执行负载均衡或容灾时不需要手动更新 `LOG_RESTORE_SOURCE`。   |
 | user_name | 所创建的复制专用用户名称。备租户在连接主租户时，需要有租户下部分系统视图的查询权限，因此需要创建对应权限的复制专用用户供设置日志恢复源使用。该用户需要具备如下租户内视图的只读权限：<ul><li>`GV$OB_LOG_STAT`: 查询租户机器列表、日志流 LSN 范围、角色(是否 Leader )等信息。</li><li>`GV$OB_UNITS`：查询所有机器信息、状态(是否 Inactive)、Zone 信息等，用于过滤、获取和维护租户机器连接等逻辑；同时为了支持指定 Region 拉取等功能。</li><li>`GV$OB_PARAMETERS`: 查询 `cluster_id` 信息。</li></ul>|
 | password | 访问视图的专用用户对应的用户密码。|
 | tenant_name | 待连接的主租户或源端的备租户名。|
 | standby_tenant_name| 备租户名称。备租户所在集群的系统租户下设置日志恢复源时需要指定 `standby_tenant_name`。|
-| LOCATION | 指定主租户的归档目的端。|
+| LOCATION | 表示日志恢复源是日志归档。`archive_path` 指定主日志归档的路径信息。|
 
 ## 示例
 
