--- a/zh-CN/6.manage/2.tenant-management/6.common-tenant-operations/3.resource-isolation/3.resource-isolation-of-mysql-mode/2.resource-isolation-at-user-level-of-mysql-mode.md
+++ b/zh-CN/6.manage/2.tenant-management/6.common-tenant-operations/3.resource-isolation/3.resource-isolation-of-mysql-mode/2.resource-isolation-at-user-level-of-mysql-mode.md
@@ -14,7 +14,7 @@
 
   如果仅需要控制 CPU 的资源隔离，则不需要进行磁盘性能校准。
 
-* 请确认已创建好需要进行资源隔离的用户。创建用户的详细操作请参见 [创建用户](../../../../../7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/9.manage-users-and-permissions/3.mysql-mode/1.create-a-user-of-mysql-mode.md)。
+* 请确认已创建好需要进行资源隔离的用户。创建用户的详细操作请参见 [创建用户](../../../../5.security-and-permissions/3.access-control/2.user-and-permission/2.permission-of-mysql-mode/1.1create-a-user-of-mysql-mode.md)。
 
 ## 背景信息
 
