--- a/zh-CN/6.manage/5.security-and-permissions/3.access-control/2.user-and-permission/3.permission-of-oracle-mode/6.view-user-permissions-of-oracle-mode.md
+++ b/zh-CN/6.manage/5.security-and-permissions/3.access-control/2.user-and-permission/3.permission-of-oracle-mode/6.view-user-permissions-of-oracle-mode.md
@@ -72,7 +72,7 @@
      1 row in set
      ```
 
-     更多 `USER_TAB_PRIVS` 视图的字段及说明请参见 [USER_TAB_PRIVS](../../../../../7.reference/7.system-views/5.system-view-of-oracle-mode/2.dictionary-view-of-oracle-mode/182.user_tab_privs-of-oracle-mode.m)。
+     更多 `USER_TAB_PRIVS` 视图的字段及说明请参见 [USER_TAB_PRIVS](../../../../../7.reference/7.system-views/5.system-view-of-oracle-mode/2.dictionary-view-of-oracle-mode/182.user_tab_privs-of-oracle-mode.md)。
 
    * 查看某个用户所拥有的角色。
 
