--- a/zh-CN/7.reference/12.database-proxy/17.set-the-maximum-connections.md
+++ b/zh-CN/7.reference/12.database-proxy/17.set-the-maximum-connections.md
@@ -6,11 +6,11 @@
 
 * `max_connections`
 
-  系统变量 `max_connections` 用于控制整个租户的最大连接数，当前仅 MySQL 模式支持该系统变量。其默认值为 `2147483647`，取值范围为 [1,2147483647]。该变量修改后，需要重启会话才能生效。
+  系统变量 `max_connections` 用于控制整个租户的最大连接数，当前仅 MySQL 模式支持该系统变量。其默认值为 `2147483647`，取值范围为 [1,2147483647]。该变量修改后，需要重启 OBServer 节点才能生效。
 
 * `max_user_connections`
 
-  系统变量 `max_user_connections` 用于控制租户内单个用户的最大并发连接数，当前仅 MySQL 模式支持该系统变量。其默认值为 `0`，表示不限制连接数，取值范围为 [0,4294967295]。该变量修改后，需要重启会话才能生效。
+  系统变量 `max_user_connections` 用于控制租户内单个用户的最大并发连接数，当前仅 MySQL 模式支持该系统变量。其默认值为 `0`，表示不限制连接数，取值范围为 [0,4294967295]。该变量修改后，需要重启 OBServer 节点才能生效。
 
 * `_resource_limit_max_session_num`
 
@@ -121,7 +121,7 @@
      SET GLOBAL max_connections = 1000;
      ```
 
-     执行成功后，需要重启会话才能生效。
+     执行成功后，需要重启 OBServer 节点才能生效。
 
    * 设置租户内单个用户的最大并发连接数
 
@@ -129,7 +129,7 @@
      SET GLOBAL max_user_connections = 50;
      ```
 
-     执行成功后，需要重启会话才能生效。
+     执行成功后，需要重启 OBServer 节点才能生效。
 
    * 设置租户内普通用户总的最大并发连接数
 
