--- a/zh-CN/7.reference/8.configuration-items-and-system-variables/1.system-configuration-items/3.cluster-level-configuration-items/126.location_refresh_thread_count.md
+++ b/zh-CN/7.reference/8.configuration-items-and-system-variables/1.system-configuration-items/3.cluster-level-configuration-items/126.location_refresh_thread_count.md
@@ -2,9 +2,14 @@
 
 `location_refresh_thread_count` 用于设置 OBServer 节点从 Root Service 中获取分区位置信息的线程数量。
 
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该配置项从 V4.2.0 版本开始默认值由 4 调整为 2。</p>
+</main>
+
 |      **属性**      |  **描述**   |
 |------------------|-----------|
 | 参数类型             | 整型        |
-| 默认值              | 4         |
+| 默认值              | 2         |
 | 取值范围             | \[2, 64\] |
 | 是否重启 OBServer 节点生效 | 否         |
