--- a/zh-CN/7.reference/8.configuration-items-and-system-variables/1.system-configuration-items/3.cluster-level-configuration-items/159.plan_cache_evict_interval.md
+++ b/zh-CN/7.reference/8.configuration-items-and-system-variables/1.system-configuration-items/3.cluster-level-configuration-items/159.plan_cache_evict_interval.md
@@ -3,11 +3,15 @@
 
 plan_cache_evict_interval 用于设置执行计划缓存的淘汰时间间隔。
 
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该配置项从 V4.2.0 版本开始默认值由 1s 调整为 5s。</p>
+</main
 
 |      **属性**      |  **描述**   |
 |------------------|-----------|
 | 参数类型             | 时间类型      |
-| 默认值              | 1s       |
+| 默认值              | 5s       |
 | 取值范围             | \[0s, +∞) |
 | 是否重启 OBServer 节点生效 | 否         |
 
