--- a/zh-CN/7.reference/8.configuration-items-and-system-variables/1.system-configuration-items/3.cluster-level-configuration-items/60.devname.md
+++ b/zh-CN/7.reference/8.configuration-items-and-system-variables/1.system-configuration-items/3.cluster-level-configuration-items/60.devname.md
@@ -3,13 +3,14 @@ devname
 
 devname 用于设置服务进程绑定的网卡设备名。
 
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该配置项从 V4.2.0 版本开始生效范围由动态生效调整为只读。</p>
+</main>
 
 |      **属性**      | **描述** |
 |------------------|--------|
 | 参数类型             | 字符串    |
 | 默认值              | bond0  |
 | 取值范围             | NULL   |
-| 是否重启 OBServer 节点生效 | 否      |
-
-
-
+| 是否重启 OBServer 节点生效 |  否，仅支持只读      |
