--- a/zh-CN/7.reference/8.configuration-items-and-system-variables/1.system-configuration-items/3.cluster-level-configuration-items/80.enable_record_trace_id.md
+++ b/zh-CN/7.reference/8.configuration-items-and-system-variables/1.system-configuration-items/3.cluster-level-configuration-items/80.enable_record_trace_id.md
@@ -2,11 +2,15 @@
 
 enable_record_trace_id 用于设置是否记录应用端设置的追踪 ID。
 
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该配置项从 V4.2.0 版本开始默认值由 True 调整为 False。</p>
+</main>
 
 |      **属性**      |                                                 **描述**                                                 |
 |------------------|--------------------------------------------------------------------------------------------------------|
 | 参数类型             | 布尔类型                |
-| 默认值              | True                |
+| 默认值              | False                |
 | 取值范围             | <li> True   <li> False    |
 | 是否重启 OBServer 节点生效 | 否                   |
 
