--- a/zh-CN/3.develop/5.read-data/1.read-data-of-mysql-mode/3.use-operators-and-functions-in-query-of-mysql-mode/11.query-results-lock-in-share-mode.md
+++ b/zh-CN/3.develop/5.read-data/1.read-data-of-mysql-mode/3.use-operators-and-functions-in-query-of-mysql-mode/11.query-results-lock-in-share-mode.md
@@ -90,4 +90,4 @@
 
 ## 相关文档
 
-[SELECT](../../../7.reference/5.sql-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/81.select-of-mysql-mode/1.select-of-mysql-mode.md)
+[SELECT](../../../../7.reference/5.sql-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/81.select-of-mysql-mode/1.select-of-mysql-mode.md)
