--- a/zh-CN/3.develop/7.application-error-handling-specification-and-common-error-solutions/1.application-error-handling-specification/2.application-error-handling-specification-of-mysql-mode.md
+++ b/zh-CN/3.develop/7.application-error-handling-specification-and-common-error-solutions/1.application-error-handling-specification/2.application-error-handling-specification-of-mysql-mode.md
@@ -2,7 +2,7 @@
 
 本节主要介绍 MySQL 兼容应用的错误处理规范。
 
-OceanBase 数据库从 V1.0 版本开始全面兼容 MySQL 数据库。在错误码方面，尽量保证错误码、SQLSTATE、错误消息等三个信息上均与 MySQL 数据库保持一致。因此，根据我们的产品设计原则，应用错误处理方式可参考 MySQL 数据库的处理规范。但是，作为一个分布式数据库，OceanBase 数据库与单机的 MySQL 数据库有着本质上的不同，一些分布式环境下特有的错误无法使用 MySQL 数据库的错误码来表达。故，如果一个错误码的值大于 4000，则表示该错误码为 OceanBase 数据库特有的错误码；如果错误码的值在 4000 以内，则表示它是 MySQL 数据库的兼容错误码。 OceanBase 数据库服务器端在 MySQL 租户模式下完整的错误码清单，请参见 [错误信息概述](待补充内链https://www.oceanbase.com/docs/common-oceanbase-database-cn-10000000001700529)。
+OceanBase 数据库从 V1.0 版本开始全面兼容 MySQL 数据库。在错误码方面，尽量保证错误码、SQLSTATE、错误消息等三个信息上均与 MySQL 数据库保持一致。因此，根据我们的产品设计原则，应用错误处理方式可参考 MySQL 数据库的处理规范。但是，作为一个分布式数据库，OceanBase 数据库与单机的 MySQL 数据库有着本质上的不同，一些分布式环境下特有的错误无法使用 MySQL 数据库的错误码来表达。故，如果一个错误码的值大于 4000，则表示该错误码为 OceanBase 数据库特有的错误码；如果错误码的值在 4000 以内，则表示它是 MySQL 数据库的兼容错误码。 OceanBase 数据库服务器端在 MySQL 租户模式下完整的错误码清单，请参见 [错误信息概述](../../../7.reference/9.error-code/6.error-code-of-mysql-mode/1.use-error-information-of-mysql-mode.md)。
 
 应用程序检测到的错误除了数据库服务器端返回的错误，还可能是驱动程序库本地返回的错误（例如，建立数据库连接失败）。由于使用 OceanBase 数据库 MySQL 租户的应用程序可使用 MySQL 的驱动库（例如，MySQL JDBC Driver），对于这部分错误码，OceanBase 数据库与 MySQL 数据库完全兼容。这类客户端错误码的值域通常是 2000 ~ 3000。
 
@@ -58,7 +58,7 @@ OceanBase 数据库从 V1.0 版本开始全面兼容 MySQL 数据库。在错误
 | 4225     | HY000    | 分区不存在。一般在分区发生迁移时可能出现。            |         失败 |  不变   | 策略三         |
 | 6002     | 40000    | 事务被系统内部回滚                                  | 失败         |  被回滚 | 策略二         |
 | 6231     | HY000    | 副本数据不可读。一般在副本发生迁移时可能出现。         |         失败 |  不变   | 策略三        |
-| 6235     | 25000    | 当前事务无法串行化。一般在 RR（Repeatable Read） 和 Serializable 隔离级别有事务并发冲突时可能出现。 </br> 关于事务隔离级别的详细介绍，请参见 [事务隔离级别](待补充内链https://www.oceanbase.com/docs/common-oceanbase-database-cn-10000000001701156)。  | 失败 |  不变 | 策略二 |
+| 6235     | 25000    | 当前事务无法串行化。一般在 RR（Repeatable Read） 和 Serializable 隔离级别有事务并发冲突时可能出现。 </br> 关于事务隔离级别的详细介绍，请参见 [事务隔离级别概述](../../../7.reference/1.oceanbase-database-concepts/8.transaction-management/2.transaction-concurrency-and-consistency/4.transaction-isolation-level/1.transaction-isolation-level-overview.md)。  | 失败 |  不变 | 策略二 |
 | 8001~8004     | 08004  | 连接不可恢复                                      | 失败         | 未知    |策略四         |
 
 ### MySQL 兼容错误码
