--- a/zh-CN/3.develop/7.application-error-handling-specification-and-common-error-solutions/1.application-error-handling-specification/3.application-error-handling-specification-of-oracle-mode.md
+++ b/zh-CN/3.develop/7.application-error-handling-specification-and-common-error-solutions/1.application-error-handling-specification/3.application-error-handling-specification-of-oracle-mode.md
@@ -4,7 +4,7 @@
 
 OceanBase 数据库从 V2.0 版本开始全面兼容 Oracle 数据库，提供 Oracle 兼容租户模式。在错误码方面，尽量保证错误码、SQLSTATE、错误消息三个信息均与 Oracle 数据库保持一致。因此，作为我们的产品设计原则，应用错误处理规范可参考 Oracle 数据库的处理规范。但是，作为一个分布式数据库，OceanBase 数据库与集中式 Oracle 数据库有着本质的不同，一些分布式环境下特有的错误无法用 Oracle 数据库的错误码来表达，故将这类内部错误码映射为错误码 `ORA-00600`，表明它是 OceanBase 数据库特有的错误码。
 
-在 OceanBase 数据库的 Oracle 租户模式中，错误消息格式与 Oracle 数据库兼容，会以 "前缀 + 数字编码" 的形式返回。如果错误源于 SQL，则会返回以 `ORA` 开头的错误消息；如果错误源于存储过程，则会返回以 `PLS` 开头的错误消息。OceanBase 数据库服务器端在 Oracle 租户模式下完整的错误码清单，请参见 [错误信息概述](待补充内链https://www.oceanbase.com/docs/common-oceanbase-database-cn-10000000001700575)。
+在 OceanBase 数据库的 Oracle 租户模式中，错误消息格式与 Oracle 数据库兼容，会以 "前缀 + 数字编码" 的形式返回。如果错误源于 SQL，则会返回以 `ORA` 开头的错误消息；如果错误源于存储过程，则会返回以 `PLS` 开头的错误消息。OceanBase 数据库服务器端在 Oracle 租户模式下完整的错误码清单，请参见 [错误信息概述](../../../7.reference/9.error-code/7.error-code-of-oracle-mode/1.use-error-information-of-oracle-mode.md)。
 
 对于 `ORA-00600` 错误码，应用程序需要从错误消息中提取具体的内部错误码。例如，在下面这个错误消息中，内部错误码为 `6210`。
 
@@ -14,7 +14,7 @@ ORA-00600: internal error code, arguments: -6210, Transaction timeout occurred, 
 
 ## 获取错误码信息
 
-不同语言的驱动程序提供了不同的 API 以获取错误信息，关于各驱动的详细介绍请参见 [OceanBase 数据库官方文档](待补充内链https://www.oceanbase.com/docs/common-oceanbase-database-cn-10000000001692927)。
+不同语言的驱动程序提供了不同的 API 以获取错误信息，关于各驱动的详细介绍请参见 [连接方式概述](../../1.connect-to-oceanbase-database/2.connect-to-oceanbase-database-of-oracle-mode/1.connection-methods-overview-of-oracle-mode.md) 中的 **驱动** 章节。
 
 ### Java 驱动库
 
@@ -52,7 +52,7 @@ OBCI 提供了与 Oracle OCI 兼容的 C 语言驱动库。当函数调用返回
 
 4. 策略四：任何语句执行报错，关闭当前连接，然后重建连接。
 
-特别地，由于开发习惯，很多使用 OCI 接口开发的服务类应用会使用长连接，若数据库服务端发生了运行时异常而不做处理，可能会造成服务无法自动恢复。对于这类应用，需要按照下面 [OceanBase 数据库特有的错误码](#oceanbase-数据库特有的错误码) 和 [Oracle 兼容错误码](#oracle-兼容错误码) 中的建议进行错误处理。
+特别地，由于开发习惯，很多使用 OCI 接口开发的服务类应用会使用长连接，若数据库服务端发生了运行时异常而不做处理，可能会造成服务无法自动恢复。对于这类应用，需要按照下面 **OceanBase 数据库特有的错误码** 和 **Oracle 兼容错误码** 中的建议进行错误处理。
 
 ### OceanBase 数据库特有的错误码
 
@@ -84,7 +84,7 @@ ORA-00600: internal error code, arguments: %d
 |-----------|-----------------------------------|-------------|----------|---------|
 | ORA-01555 | 读取到的快照版本太旧                | 失败        | 不变     | 策略三   |
 | ORA-24761 | 事务被系统内部回滚                  | 失败        | 被回滚   | 策略二   |
-| ORA-08177 | 当前事务无法串行化。一般在 RR（Repeatable Read） 和 Serializable 隔离级别有事务并发冲突时可能出现。 </br> 关于事务隔离级别的详细介绍，请参见 [事务隔离级别](待补充内链https://www.oceanbase.com/docs/common-oceanbase-database-cn-10000000001701156)。 | 失败 | 不变 | 策略二 |
+| ORA-08177 | 当前事务无法串行化。一般在 RR（Repeatable Read） 和 Serializable 隔离级别有事务并发冲突时可能出现。 </br> 关于事务隔离级别的详细介绍，请参见 [事务隔离级别概述](../../../7.reference/1.oceanbase-database-concepts/8.transaction-management/2.transaction-concurrency-and-consistency/4.transaction-isolation-level/1.transaction-isolation-level-overview.md)。 | 失败 | 不变 | 策略二 |
 
 对于使用了 OBCI 的应用程序，驱动端内会返回一些 Oracle 数据库兼容的错误码，也遵循 Oracle 数据库相同的处理方式。特别的，应用程序需要关注以下错误码。
 
